# LidMelodica

./: CMakeLists.txt  README.md
src/: AudioEngine.cpp  AudioEngine.h  HingeSensor.cpp  HingeSensor.h  KeyMap.h  MelodicaWindow.cpp  MelodicaWindow.h  SynthVoice.cpp  SynthVoice.h  main.cpp
udev/: 99-yoga7-iio.rules
